--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@ h2 {
   margin: 2rem;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .signs {
   display: flex;
 }
