--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ h2 {
   align-items: center;
 }
 
+button {
+  padding: 10px;
+  border-radius: 5px;
+  margin: 2px;
+}
+
 .signs {
   display: flex;
 }
