--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ h2 {
   align-items: center;
 }
 
+input {
+  padding: 0.5rem;
+  border-radius: 5px;
+}
+
 button {
   padding: 10px;
   border-radius: 5px;
