--- a/style.css
+++ b/style.css
@@ -15,10 +15,11 @@ h2 {
 }
 
 input {
-  padding: 1rem;
+  padding: 1.5rem;
   border-radius: 5px;
   margin: 0.5rem;
   color: white;
+  font-size: 1rem;
 }
 
 button {
